# typingsucks

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  daemon.rs  main.rs  state.rs
src/audio/: capture.rs  denoise.rs  mod.rs  resample.rs
src/hotkey/: linux.rs  mod.rs
src/model/: download.rs  mod.rs
src/output/: clipboard.rs  paste.rs
src/transcribe/: api.rs  mod.rs  whisper.rs
src/ui/: mod.rs  popup.rs  settings.rs
